--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,12 @@ body{
 header{
     padding: 32px;
     text-align: center;
-    color:darkgray;
+    color:rgb(255, 255, 255);
+    font-family:fantasy;
+
+    
 }
+
 
 .Loading{
     height: 100vh;
@@ -13,4 +17,5 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
