--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,27 @@ header{
     height: 30vw;
     object-fit: cover;
 }
+
+.BtnPag {
+    width: 100%;
+    height: 40px;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: large;
+  }
+  
+  .BtnPag a {
+    background-color: gray;
+    padding: 8px;
+    margin: 8px;
+    border-radius: 5px;
+    border: 1px solid #000;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    
+  }
+
+  
