--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,17 @@ header{
     align-items: center;
 
 }
+
+
+.SearchCate{
+    height: 10vh;
+    width: 522vh; 
+    justify-content: center;
+    display:block;
+    align-items: center;
+  
+}
+
 .igCard{
     width: 100%;
     height: 15vw;
